2007-01-19 TECHER David <davidtecher@yahoo.fr>

	* extras/template_gis/Makefile: escape $bindir
	  to allow for colons in it's value (win32 issue).

2007-01-18 Markus Schaber <schabi@logix-tt.com>

        * java/jdbc/Makefile:
          Fixed javadoc build on Windows, kudos to Mark Cave-Ayland!

2007-01-13 Michael Fuhr <mike@fuhr.org>

	* extras/template_gis/Makefile: quote grep argument
	  for Solaris to work.

2007-01-12 Gerald Fenoy <djay@gentoo.org>

	* configure.in: add --with-xsl switch.

---------  PostGIS-1.2.1 release [2007-01-11] --------------------------

2007-01-08 Markus Schaber <schabi@logix-tt.com>

        * java/jdbc/Makefile:
          Fixed gcj classpath problems
        * src/org/postgis/DriverWrapperLW.java,
          src/org/postgis/DriverWrapperAutoprobe.java,
          src/org/postgis/DriverWrapper.java,
          jtssrc/org/postgis/jts/JtsWrapper.java:
          fixed 8.2 compatibility

2007-01-05 Sandro Santilli <strk@refractions.net>

	* GNUmakefile: bring in extra/template_gis for all rules.
	* extras/template_gis/Makefile: have 'install' also install manuals.

2006-12-29 Sandro Santilli <strk@refractions.net>

	* configure.in: fixed GEOS_LDFLAGS detection
	  for older GEOS versions.
	* doc/postgis.xml: cleaned up Hard Upgrade section
	  (was unreadable).

2006-12-22 Markus Schaber <schabi@logix-tt.com>

        * java/jdbc/Makefile
          Added generation of basic javadoc zip file.

2006-12-20 Sandro Santilli <strk@refractions.net>

	* regress/README: wrote info about adding regression tests

2006-12-20 Kevein Neufeld <kneufeld@refractions.net>

	* lwgeom/lwgeom_gist.c
	  Added fix to permit gist indexes to have more than 459 null
	  geometries in a table

2006-12-15 Markus Schaber <schabi@logix-tt.com>

        * java/jdbc/Makefile
          Fixed Makefile for jts tests, commented debug options better
          
        * java/jdbc/jtssrc/org/postgis/jts/JtsBinaryWriter.java 