@@ -9,12 +9,10 @@ SCRIPTS:=$(SCRIPTS_IN:.in=)
 PUBLIC_SCRIPTS:=mktemplate_gis rmtemplate_gis createdb.postgis
 SONAME:=$(shell grep "^REL_MAJOR_VERSION" ../../Version.config | cut -d= -f2)
 
-# excape colon (:) chars in $bindir
-SUBBINDIR=$(shell echo $(bindir)|sed -e's:\::\\\\\\\::g')
-SUBSTITUTE=-e s:@bindir@:$(SUBBINDIR):g \
-           -e s:@datadir@:$(datadir):g \
-           -e s:@prefix@:$(prefix):g \
-           -e s:@SONAME@:$(SONAME):g
+SUBSTITUTE=-e s!@bindir@!$(SUBBINDIR)!g \
+           -e s!@datadir@!$(datadir)!g \
+           -e s!@prefix@!$(prefix)!g \
+           -e s!@SONAME@!$(SONAME)!g
 SCRIPT_PREPARE=cat $(SCRIPT).in | sed $(SUBSTITUTE) > $(SCRIPT)
 SCRIPT_TARGETDIR=$(DESTDIR)$(bindir)
 SCRIPT_TARGET=$(SCRIPT_TARGETDIR)/$(SCRIPT)
